--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title></title>
   </head>
   <body>
-
+    <div id=main-graph>
+    </div>
   </body>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
