--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Cheater Spotter</title>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
+    <div class="description">相関関係は二つのデータセットの相関を０から１で表せる。
+複数のデータセット（変数）を複数次元にプロットして、相関関係を調べる。十分な変数があれば未知の結果をよそうできるのでは</div>
     <div id=main-graph>
     </div>
   </body>
