--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="description">相関関係は二つのデータセットの相関を０から１で表せる。
-複数のデータセット（変数）を複数次元にプロットして、相関関係を調べる。十分な変数があれば未知の結果をよそうできるのでは</div>
+    <div class="description">This graph aims to find out the cheater in the class by using the correlation Method. Comparing the correlation between two penguins, two penguins probably cheat if the value is between 0.7~1.0</div>
     <div id=main-graph>
     </div>
   </body>
