--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
+    <div id=main-graph></div>
     <div class="description">
-    This graph aims to find out the cheater in the class by using the correlation Method. Comparing the correlation between two penguins, when the correlation coefficient is negative, two penguins' scores are decreasing, so does the correlation. When the correlation coefficient is positive, two penguins score are increasing, so does the correlation.</div>
-    <div id=main-graph>
-    </div>
-  </body>
+    This graph aims to find out the cheater in the class by using the correlation Method. Comparing the correlation between two penguins, when the correlation coefficient is negative, two penguins' scores are decreasing, so does the correlation. When the correlation coefficient is positive, two penguins score are increasing, so does the correlation.</div>  </body>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </html>
