--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <div id=title>Find the Cheater</div>    
+    <center><h1>Find the Cheater</h1></center>
     <div id=main-graph></div>
     <div class="description">
-    This graph aims to find out the cheater in the class by using the correlation Method. Comparing the correlation between two penguins, when the correlation coefficient is negative, two penguins' scores are decreasing, so does the correlation. When the correlation coefficient is positive, two penguins score are increasing, so does the correlation.</div>  </body>
+    This graph aims to find out the cheater in the class by using the correlation between two students' homework scores. The color of the map represents the correlation coefficient. If the color is red for a pair of student, then there is a strong correlation between the scores of those two students, and there is more probability that they are cheating on homework since their scores much over the time in the course. The correspondence of the other colors and the correlation is presented in the legend. We suggest if the color is orange or red, you can start examining the homework and see if they are cheating.
+</div>
+     </body>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </html>
